Normalized line endings and de-expanded Subversion keywords.

--- a/analyze.phtml
+++ b/analyze.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: analyze.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -225,7 +225,7 @@ if (isset($sql_query)) $sql_query = str_replace('oscardotnetdb',$ini[db][oscardo
                           break;
                        }
                     echo "               <br>\n"
-                       . "               <p><small><small><em><pre>\$Id$</pre></em></small></small>\n"
+                       . "               <p><small><small><em><pre>\$Id: analyze.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>\n"
                        . "            </td>\n"
                        . "         </tr>\n"
                        . "      </table>\n"
