--- a/form-add-donation-ooa.phtml
+++ b/form-add-donation-ooa.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: form-add-donation-ooa.phtml 7279 2020-07-04 00:50:55Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -256,7 +256,7 @@ $db_link = DbLink($ini);
            } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-add-donation-ooa.phtml 7279 2020-07-04 00:50:55Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
