--- a/f_bevalidboardingpass.phtml
+++ b/f_bevalidboardingpass.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: f_bevalidboardingpass.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 function BeValidBoardingPass
    (
