--- a/faq.phtml
+++ b/faq.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: faq.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 require_once("f_bodyopen.phtml");
 require_once("f_roleemailaddress.phtml");
@@ -57,7 +57,7 @@ if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
               ?>
            </blockquote>
         <hr>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: faq.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
