--- a/form-act-singly.phtml
+++ b/form-act-singly.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: form-act-singly.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -543,7 +543,7 @@ if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
            } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-act-singly.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
