--- a/form-add-donation-old.phtml
+++ b/form-add-donation-old.phtml
@@ -1,6 +1,6 @@
 <?php
 //
-// $Id$
+// $Id: form-add-donation-old.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -505,7 +505,7 @@ else
               } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-add-donation-old.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
