--- a/form-add-donation.phtml
+++ b/form-add-donation.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: form-add-donation.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -322,7 +322,7 @@ else
            } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-add-donation.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
