--- a/form-add-resident.phtml
+++ b/form-add-resident.phtml
@@ -1,6 +1,6 @@
 <?php
 //
-// $Id$
+// $Id: form-add-resident.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -205,7 +205,7 @@ if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
               } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-add-resident.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
