--- a/form-export-follow-up.phtml
+++ b/form-export-follow-up.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: form-export-follow-up.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -121,7 +121,7 @@ if ($ini[app][do_report_all_errors]) error_reporting(E_ALL);
               }
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: form-export-follow-up.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
       </td>
     </tr>
   </table>
