--- a/main.phtml
+++ b/main.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: main.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 $bpn = $bpn;
 //
@@ -168,7 +168,7 @@ $border_thickness = 0;
                   Contact</a></b></td><td valign=top>the KEYclick System Administrator.</td></tr>
                </table>
                <hr>
-               <p><small><small><em><pre>$Id$</pre></em></small></small>
+               <p><small><small><em><pre>$Id: main.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
             </div>
          </td>
       </tr>
