--- a/perform-update-donation.phtml
+++ b/perform-update-donation.phtml
@@ -1,6 +1,6 @@
 <?
 //
-// $Id$
+// $Id: perform-update-donation.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $
 //
 //
 // Emulate register_globals on
@@ -143,7 +143,7 @@ $db_link = DbLink($ini);
            } // BeValidBoardingPass
         ?>
         <br>
-        <p><small><small><em><pre>$Id$</pre></em></small></small>
+        <p><small><small><em><pre>$Id: perform-update-donation.phtml 7093 2020-05-01 01:00:11Z kevinanlipscomb $</pre></em></small></small>
        </td>
     </tr>
   </table>
